set(COMMON_SRCS 
    src/app.cpp
    src/bitmap_text.cpp
    src/common.cpp
    src/glEnumString.cpp
    src/glm.cpp
    src/light.cpp
    src/program.cpp
    src/quad.cpp
    src/geometry.cpp
    src/sphere.cpp
    src/cuboid.cpp
    src/cone.cpp
    src/stringutil.cpp
    src/texutil.cpp
    src/cylinder.cpp
    src/torus.cpp
    )

add_library(common 
    ${COMMON_SRCS}
    )

target_link_libraries(common
    gl43
    ${OPENGL_gl_LIBRARY}
    ${GLFW3_LIBRARIES}
    ${FREETYPE_LIBRARIES}
    ${FIP_LIBS}
    )
